RESOLVED FIXED 121355
CTTE: RenderDetailsMarker is never anonymous.
https://bugs.webkit.org/show_bug.cgi?id=121355
Summary CTTE: RenderDetailsMarker is never anonymous.
Andreas Kling
Reported 2013-09-14 01:08:14 PDT
CTTE: RenderDetailsMarker is never anonymous.
Attachments
Patch (4.60 KB, patch)
2013-09-14 01:08 PDT, Andreas Kling
darin: review+
Andreas Kling
Comment 1 2013-09-14 01:08:40 PDT
Darin Adler
Comment 2 2013-09-14 01:16:19 PDT
Comment on attachment 211633 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=211633&action=review > Source/WebCore/rendering/RenderDetailsMarker.h:-60 > -// This will catch anyone doing an unnecessary cast. > -void toRenderDetailsMarker(const RenderDetailsMarker*); No equivalent to this needed?
Andreas Kling
Comment 3 2013-09-14 02:14:47 PDT
Note You need to log in before you can comment on or make changes to this bug.