CTTE: RenderDetailsMarker is never anonymous. <https://webkit.org/b/121355>

Reviewed by Darin Adler.

This renderer is never anonymous, and always has a corresponding DetailsMarkerControl.
Couldn't resist cleaning up the class a little bit, adding OVERRIDE and making
toRenderDetailsMarker() into a reference version.

Canonical link: https://commits.webkit.org/139318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155761 268f45cc-cd09-0410-ab3c-d52691b4dbfc